--- a/portfolio_zaki/package.json
+++ b/portfolio_zaki/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-tooltip": "^4.4.2",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage":"."
+  "homepage": "."
 }
