--- a/portfolio_zaki/package.json
+++ b/portfolio_zaki/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-tooltip": "^4.4.2",
+    "tsparticles": "^2.5.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
